--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,19 +5,79 @@
     "version": "0.2.0",
     "configurations": [
         {
-          "type": "lldb",
-          "request": "launch",
-          "name": "Launch",
-          "args": [],
-          "program": "${workspaceFolder}/target/debug/rust-fdmbpm",
-          "windows": {
-            "program": "${workspaceFolder}/target/debug/rust-fdmbpm"
-          },
-          "cwd": "${workspaceFolder}",
-          "stopOnEntry": false,
-          "sourceLanguages": [
-            "rust"
-          ],
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug unit tests in library 'rust-fdmbpm'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--lib",
+                    "--package=rust-fdmbpm"
+                ],
+                "filter": {
+                    "name": "rust-fdmbpm",
+                    "kind": "lib"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug executable 'rust-fdmbpm'",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=rust-fdmbpm",
+                    "--package=rust-fdmbpm"
+                ],
+                "filter": {
+                    "name": "rust-fdmbpm",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug unit tests in executable 'rust-fdmbpm'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bin=rust-fdmbpm",
+                    "--package=rust-fdmbpm"
+                ],
+                "filter": {
+                    "name": "rust-fdmbpm",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug integration test 'unit_tests'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--test=unit_tests",
+                    "--package=rust-fdmbpm"
+                ],
+                "filter": {
+                    "name": "unit_tests",
+                    "kind": "test"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
