--- a/fdmbpm/Cargo.toml
+++ b/fdmbpm/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+itertools = "0.10.1"
 structopt = "0.3.13"
 ndarray = "0.14"
 hdf5 = "0.7.1"
