--- a/optical_waveguide/Cargo.toml
+++ b/optical_waveguide/Cargo.toml
@@ -12,6 +12,8 @@ structopt = "0.3.13"
 ndarray = "0.14"
 hdf5 = "0.7.1"
 num = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [profile.release]
 debug = true
