--- a/optical_waveguide/Cargo.toml
+++ b/optical_waveguide/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "optical_waveguide"
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 itertools = "0.10.1"
 structopt = "0.3.13"
@@ -14,3 +18,4 @@ ndarray = "0.15.3"
 num = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+pyo3 = { version = "0.15.0", features = ["extension-module"]}
