--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ num = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 pyo3 = { version = "0.15.0", features = ["extension-module"]}
+
+[package.metadata.maturin]
+python-source = "package"
