--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
+# Workaround to bootstrap maturin on non-manylinux platforms
+[build-system]
+requires = ["setuptools~=53.0.0", "wheel~=0.36.2", "toml~=0.10.2"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "optical_waveguide"
 requires-python = ">=3.6"
